re-added permalink button

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
 Apache® and Apache Cassandra® are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries. Amazon DynamoDB® and Keyspaces® are trademarks of Amazon.com, Inc. No endorsements by The Apache Software Foundation or Amazon.com, Inc. are implied by the use of these marks.
               </p>
           </div>
+          <div class="col-lg-2" id="share">
+          </div>
         </div>
         <!-- <div class="row"><small><%= VUE_APP_VERSION %></small></div> -->
       </div>
