--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,21 @@
     </nav>
     <div id="app">
     </div>
-    <footer class="bg-light text-center text-lg-start">
+    <footer class="text-center text-lg-start">
       <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-10">
+            <p>
+              <img src="/scylla-logo.svg" alt="">
+            </p>
+            <p>
+              Apache® and Apache Cassandra® are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries. Amazon DynamoDB® and Keyspaces® are trademarks of Amazon.com, Inc. No endorsements by The Apache Software Foundation or Amazon.com, Inc. are implied by the use of these marks.
+            </p>
+          </div>
+          <div class="col-lg-2" id="share">
+          </div>
+        </div>
+        <hr>
         <div class="row">
           <div class="col-lg-10">
             <p><a href="https://github.com/scylladb/scylla-price-calculator/">
@@ -35,11 +48,6 @@
             <p>
             Calculator model and assumptions are documented in the <a href="https://github.com/scylladb/scylla-price-calculator/blob/master/README.md">README</a>.
             </p>
-            <p>
-Apache® and Apache Cassandra® are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries. Amazon DynamoDB® and Keyspaces® are trademarks of Amazon.com, Inc. No endorsements by The Apache Software Foundation or Amazon.com, Inc. are implied by the use of these marks.
-              </p>
-          </div>
-          <div class="col-lg-2" id="share">
           </div>
         </div>
         <!-- <div class="row"><small><%= VUE_APP_VERSION %></small></div> -->
