initial version of cosmosdb model

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
               <img src="/scylla-logo.svg" alt="">
             </p>
             <p>
-              Apache® and Apache Cassandra® are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries. Amazon DynamoDB® and Keyspaces® are trademarks of Amazon.com, Inc. No endorsements by The Apache Software Foundation or Amazon.com, Inc. are implied by the use of these marks.
+              Apache® and Apache Cassandra® are either registered trademarks or trademarks of the Apache Software Foundation in the United States and/or other countries. Datastax is a trademark of Datastax inc. Amazon DynamoDB® and Keyspaces® are trademarks of Amazon.com, Inc. Azure CosmosDB is a trademark of the Microsoft corporation. No endorsements by The Apache Software Foundation, Datastax, Microsoft corporation or Amazon.com, Inc. are implied by the use of these marks.
             </p>
           </div>
           <div class="col-lg-2" id="share">
